# discord_rustbot

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  utils.rs
src/commands/: inspireme.rs  mod.rs  music.rs
