[package]
name = "offline_rustbot"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.poise]
version = "0.5.5"

[dependencies.songbird]
version = "0.3.2"
features = ["builtin-queue"]

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.11.18"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.url]
version = "2.4.0"